--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           alt="Foto perfil Brenno Eudes sorrindo."
         />
         <!--img e enter, criar uma tag img com os atribuitos automaticamente-->
-        <p>@BrennoEudes</p>
+        <h1>Brenno Eudes</h1>
+        <h2>Front-end Developer</h2>
+        <h3>Digital Marketer</h3>
       </div>
       <div id="switch" onclick="toggleMode()">
         <!--Adiciona a função JS-->
