--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="See my professionals links!">
+    <meta name="description" content="See my professionals links!" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Permite o funcionamento das @mediaqueries -->
     <title>Professionals Links | Brenno Eudes</title>
@@ -33,7 +33,7 @@
       <div id="switch" onclick="toggleMode()">
         <!--Adiciona a função JS-->
         <button></button>
-        <span> </span>
+        <span></span>
       </div>
       <ul>
         <li>
@@ -47,11 +47,6 @@
         <li>
           <a href="https://www.instagram.com/brennoeudes/" target="_blank"
             >Instagram</a
-          >
-        </li>
-        <li>
-          <a href="https://www.facebook.com/brennoeudes" target="_blank"
-            >Facebook</a
           >
         </li>
       </ul>
@@ -85,7 +80,10 @@
     <!--Conexação com arquivo JS-->
     <footer>
       From
-      <img src="./assets/christ-redeemer-icon-light-mode.png" alt="christ-redeemer-icon" />
+      <img
+        src="./assets/christ-redeemer-icon-light-mode.png"
+        alt="christ-redeemer-icon"
+      />
       to world.
     </footer>
   </body>
