tag a youtube deletion

--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
       <ul>
         <li>
           <a href="https://www.linkedin.com/in/brennoeudes/" target="_blank"
-            >LinkedIn</a
+            >English</a
           >
         </li>
         <li>
-          <a href="https://github.com/brennoEudes" target="_blank">GitHub</a>
+          <a href="https://github.com/brennoEudes" target="_blank">Español</a>
         </li>
         <li>
           <a href="https://www.instagram.com/brennoeudes/" target="_blank"
-            >Instagram</a
+            >Português</a
           >
         </li>
       </ul>
@@ -58,11 +58,6 @@
         <a href="https://www.instagram.com/brennoeudes/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-
-        <a href="https://www.youtube.com/watch?v=3vzgTW39Mw8" target="_blank">
-          <ion-icon name="logo-youtube"></ion-icon>
-        </a>
-
         <a href="https://www.linkedin.com/in/brennoeudes/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
