--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         </li>
       </ul>
       <div id="social-links">
+        <h4>Useful Links</h4>
         <a href="https://www.linkedin.com/in/brennoeudes/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
